front event show finished

--- a/app/assets/stylesheets/root/root.scss
+++ b/app/assets/stylesheets/root/root.scss
@@ -24,7 +24,7 @@ body {
   --purple_bg: rgba(var(--purple), 0.05);
 
   /* SECONDARIES */
-  --orange: 238, 177, 21;
+  --orange: rgb(238, 177, 21);
   --green: 102, 163, 92;
 
 
