--- a/app/assets/stylesheets/pages/user/show_event.scss
+++ b/app/assets/stylesheets/pages/user/show_event.scss
@@ -2,38 +2,102 @@
    display: flex;
    flex-direction: column;
 
-   ul{
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: space-between;
+
+
+   .event-left-container{
+      .img-show{
+         background: url(https://images.unsplash.com/photo-1530818021323-3d2bf2af7a87?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80);
+         background-size: 100%;
+         height: 500px;
+         background-position: 25% 20%;
+         background-repeat: no-repeat;
+      }
    }
 
-   li{
-      display: flex;
-      flex-direction: row;
-      border: 10px solid white;
+   .top-element{
+      justify-content: center !important;
+      align-items: center !important;
+      display: flex !important;
+      padding: 20px;
+
+      .title-lign{
+         width: 300px;
+      }
+   }
+
+
+   .box {
       border-radius: 5px;
-      padding: auto;
-      width: 230px;
-      padding: 10px;
-    
-      p{
-         padding-left: 10px;
+      box-shadow: 0px 30px 40px -20px gray;
+      padding: 30px;
+      margin: 20px;  
+   }
+
+   i {
+      float: right;
+   }
+
+   @media (max-width: 450px) {
+      .box {
+         height: 200px;
+      }
+   }
+
+   @media (max-width: 950px) and (min-width: 450px) {
+      .box {
+         text-align: center;
+         height: 180px;
+      }
+   }
+
+   .cyan {
+      border-top: 3px solid var(--orange);
+   }
+   .red {
+      border-top: 3px solid var(--orange);
+   }
+   .blue {
+      border-top: 3px solid var(--orange);
+   }
+   .orange {
+      border-top: 3px solid var(--orange);
+   }
+
+   .purple{
+      border-top: 3px solid var(--orange);
+   }
+   h2 {
+      color: var(--varyDarkBlue);
+      font-weight: var(--weight3);
+   }
+
+
+   @media (min-width: 950px) {
+      .row1-container {
+         display: flex;
+         justify-content: center;
+         align-items: center;
+      }
+      
+      .row2-container {
+         display: flex;
+         flex-direction: column;
+         justify-content: center;
+         align-items: center;
+      }
+      .box-down {
+         position: relative;
+         top: 150px;
+      }
+      .box {
+         width: 20%;
+      
       }
    }
 }
 
-.event-left-container{
-   .img-show{
-      background: url(https://images.unsplash.com/photo-1530818021323-3d2bf2af7a87?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80);
-   }
+.down-button{
+   position: relative;
+   bottom: 10px;
+   left: 10px;
 }
-
-.top-element{
-   justify-content: center !important;
-   align-items: center !important;
-   display: flex !important;
-   padding: 20px;
-}
-
