save before restart

--- a/app/views/events/new.html.erb
+++ b/app/views/events/new.html.erb
@@ -3,7 +3,7 @@
    <%= render 'image' %>
   <div class="event-container-left form-container-right"> 
       <%= render 'top_create_element' %>
-
+      <%= render 'choose_picture' %>
       <%= render partial: 'form_create', locals:{ event: @event, cities: @cities, sports: @sports} %>
    </div>
 </div>
