--- a/app/assets/stylesheets/pages/user/new_event.scss
+++ b/app/assets/stylesheets/pages/user/new_event.scss
@@ -7,6 +7,12 @@
       }
    }
 }
+
+.event-picture{
+   position: relative;
+   top: 30px;
+}
+
    .event-img{
       background: url(https://images.unsplash.com/photo-1517637633369-e4cc28755e01?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80) !important;
       background-repeat: no-repeat !important;
