--- a/app/assets/stylesheets/atoms/buttons.scss
+++ b/app/assets/stylesheets/atoms/buttons.scss
@@ -59,6 +59,10 @@
       color: black !important
    }
 
+   .link-button{
+      color: rgb(var(--purple));
+   }
+
    // SPACING
    .button-row{
       display: flex;
@@ -66,3 +70,4 @@
       align-items: center;
       gap: 8px;
    }
+
