--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -14,7 +14,14 @@
   <div class="container-geoloc">
     <div class="list-container">
       <div class="container">
+      <%if @user_events.empty?%>
+          <p> Tu n'as pas encore d'évènements à venir. </p>
+          <%= link_to events_path, class: "link-button" do %>
+           Voir les events <i class="fa-solid fa-arrow-right"></i> 
+          <%end%>
+      <%else%>
         <%= render partial: 'events/event_list', locals: {events: @user_events}%>
+      <%end%>
       </div>
     </div>
   </div>
