--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -7,7 +7,7 @@
             <%if current_user.avatar.attached?%>
               <%= image_tag current_user.avatar, alt: 'avatar', :style => "width:50px;" %>
             <%else%>
-               <%= image_tag "avatar.png", :style => "width:50px;" %>
+              <%= image_tag "defaultavatar.png", :style => "width:50px;" %>
             <%end%>
           </div>
           <span> <%= current_user.first_name%> </span>
