hg added max participation to event

--- a/app/views/events/_form_create.html.erb
+++ b/app/views/events/_form_create.html.erb
@@ -37,6 +37,8 @@
           </div>
         </div>
 
+        <div class="together">
+        
           <div class="input">
             <p class="input-name">Description</p>
             <div class="input-wrapper">
@@ -45,6 +47,14 @@
             </div>
           </div>
 
+          <div class="input">
+            <p class="input-name">Participants max</p>
+            <div class="input-wrapper">
+              <%= form.number_field :max_participants, placeholder: "Vide si sans limite" %> 
+            </div>
+          </div>
+
+        </div>
         <div class="together">
           <div class="input">
             <p class="input-name">Date</p>
