--- a/app/views/events/_form_edit.html.erb
+++ b/app/views/events/_form_edit.html.erb
@@ -37,13 +37,13 @@
           </div>
         </div>
 
-          <div class="input">
-            <p class="input-name">Description</p>
-            <div class="input-wrapper">
-              <%= form.text_field :description, placeholder: "Rentrez une description" %>
-              <i class="fa-solid fa-comment"></i>
-            </div>
+        <div class="input">
+          <p class="input-name">Description</p>
+          <div class="input-wrapper">
+            <%= form.text_field :description, placeholder: "Rentrez une description" %>
+            <i class="fa-solid fa-comment"></i>
           </div>
+        </div>
 
         <div class="together">
           <div class="input">
@@ -82,7 +82,7 @@
       <div class="bottom-event bottom">
         <div class="input">
           <div class="actions">
-            <%= form.submit %>
+            <%= form.submit "Mettre à jour" %>
           </div> 
         </div>  
           <div class="under-button-event under-button">
