--- a/app/views/events/_events_around.html.erb
+++ b/app/views/events/_events_around.html.erb
@@ -9,10 +9,9 @@
         <%else%>
               <h2> Les evenements autour de toi (scroll)</h2>
               <br>
-              <ul>
                 <ul class="event-items scrollable-list">
                     <% @events.each do |event| %>
-                      <div class="event-item">
+                      <li class="event-item">
                         <div class="event-date-container"> 
                           <p class="event-date-day"> <%= event.date.strftime("%d")%> </p>
                           <p> <%= event.date.strftime("%B") %>  </p>
@@ -24,24 +23,24 @@
 
                           <%= event.date.strftime("%Hh%M")%>
                         </div>
+                        
                         <div class="button-participate">
-                          <% if find_participation(event,current_user)%>
+                          <%if find_participation(event,current_user) %>
                             <%=button_to event_participation_path(event, find_participation(event,current_user)), method: :delete, :class => "button primary-outline" do %>
                             <i class="bi bi-bookmark-check-fill"></i>&nbsp; Ne plus participer<%end%>
-                            </li>
+                            <% elsif event.is_full? %>
+                            <button>DESO C'EST PLEIN</button>
                             <%else%>
                             <%=button_to event_participations_path(event),:class => "button primary" do %>
                             <i class="bi bi-bookmark-plus"></i></i>&nbsp; Participer <%end%>
-                            </li>
                           <%end%>
                         </div>
 
 
                         <div class="event-sport-tag"> <%=event.sport.name%> </div>
-                      </div>
+                      </li>
                     <%end%> 
                 </ul>
-              </ul>
           <%end%>
       </div>
     </div>
