--- a/app/views/events/_form_edit.html.erb
+++ b/app/views/events/_form_edit.html.erb
@@ -40,7 +40,7 @@
         <div class="input">
           <p class="input-name">Description</p>
           <div class="input-wrapper">
-            <%= form.text_field :description, placeholder: "Rentrez une description" %>
+            <%= form.text_area :description, placeholder: "Rentrez une description" %>
             <i class="fa-solid fa-comment"></i>
           </div>
         </div>
