--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -52,7 +52,7 @@
     
     <div class="row3-container">
       <div class="box purple">
-        <h2>Adresse-City: </h2>
+        <h2>Adresse: </h2>
         <p><%= @event.full_address %></p>
         <i class="fa-solid fa-location-dot" style="font-size: 1.2em"></i>
       </div>
