--- a/app/views/messages/_message_object.html.erb
+++ b/app/views/messages/_message_object.html.erb
@@ -1,3 +1,4 @@
 <p class="px-3" id="message-<%=message.id%>" onclick="" style="cursor:pointer;">
-<%=link_to message.object, message_path(message, :read => true), remote: true, method: "put", :class => "read-#{message.read}", :id => "link-#{message.id}"%></p>
+<%=link_to recipient.full_name, user_path(recipient) %>
+<%=link_to message.object, message_path(message, :read => true), remote: true, method: :patch, :class => "read-#{message.read}", :id => "link-#{message.id}"%></p>
 <hr id="hr-<%=message.id%>">
