--- a/app/assets/stylesheets/atoms/card-bg.scss
+++ b/app/assets/stylesheets/atoms/card-bg.scss
@@ -5,7 +5,7 @@
    position: relative;
    height: fit-content;
    padding: 70px 25px 25px 25px;
-   margin-top: 1.8rem
+   margin-top: 1.8rem;
 }
 
 .card-icon{
@@ -20,6 +20,22 @@
       margin: 0px;
       color: var(--border-grey);
    }
+}
+
+.indicator-notif{
+   height: 21px;
+   width: 21px;
+   border-radius: 50%;
+   background-color: red;
+   position: absolute;
+   right: 41px;
+   top: 8px;
+   color: white;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+   font-size: 0.9rem;
+   font-family: var(--bold-font);
 }
 
 .card-title{
