--- a/app/views/cities/index.html.erb
+++ b/app/views/cities/index.html.erb
@@ -1,31 +1,39 @@
 <p id="notice"><%= notice %></p>
 
-<h1>Cities</h1>
+<div class="city-container form-container">
 
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Longitude</th>
-      <th>Latitude</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
+    <div class="picture-container form-container-left">
+      <div class="city-img img-fluid"></div>
+    </div>
 
-  <tbody>
+
+
+<div class="card-container form-container-right">  
+    <div class="top-element">
+        <div class="twins">
+          <h1 class="title"> Villes</h1>
+          <div class="title-lign"></div>
+        </div>  
+    </div>
+
     <% @cities.each do |city| %>
-      <tr>
-        <td><%= city.name %></td>
-        <td><%= city.longitude %></td>
-        <td><%= city.latitude %></td>
-        <td><%= link_to 'Show', city %></td>
-        <td><%= link_to 'Edit', edit_city_path(city) %></td>
-        <td><%= link_to 'Destroy', city, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
 
-<br>
+    <div class="card"> 
 
-<%= link_to 'New City', new_city_path %>
+      <div class="card-body">
+          
+          
+          <div class="card-title">
+          <%= city.name %>
+          </div>
+
+          <%= link_to 'Voir les infos', city, class:'button primary' %>
+
+      </div>
+      
+    </div> 
+      <% end %>
+  </div>     
+</div>
+
+<!-- <%= link_to 'New City', new_city_path %> -->
