--- a/app/views/users/notif-meteo/_notif_meteo.html.erb
+++ b/app/views/users/notif-meteo/_notif_meteo.html.erb
@@ -1,5 +1,5 @@
 <div class="wrapper-not-meteo">
-   <div class="notification-card card" id="notif-card">
+   <div onclick="openNotif()" class="notification-card card" id="notif-card">
       <p class="card-title"> Notifications </p>
       <p class="card-icon"> <i class="fa-solid fa-bell"></i> </p> 
       <div class="indicator-notif"> <%= @user_notifications.length%>  </div>
