--- a/app/views/messages/index.html.erb
+++ b/app/views/messages/index.html.erb
@@ -1,45 +1,20 @@
 <div class="index container mb-5 text-center">
   <div class="row text-center">
     <div class="container mb-5 text-center">
-      <%=link_to "Ecrire un message", new_message_path, :class => "btn btn-primary"%>
+      <%=link_to "Ecrire un message", new_message_path, :class => "button primary"%>
     </div>
     <div class="row mb-3">
-      <p id="notice"><%= notice %></p>
       <h1>Messages</h1>
     </div>
     <div class="row align-items-start px-3">
-      <div class="col-5">
+      <div class="col-5 card container-friends-list">
         <div class="row mb-3">
-          <h2 class="offset-md-1">Liste de tes messages reçus</h2>
-          <hr>
-
-          <div id="messages-sent-list">
-            <%if @messages_received.present?%>
-              <%@messages_received.each do |message|%>
-                <%= render partial: "message_object", locals: {message: message, user: sender}%>
-              <%end%>
-            <%else%>
-              Pas encore de messages reçus
-            <%end%>
-          </div>
-        </div>
-        <div class="row mb-3">
-          <h2 class="offset-md-1">Liste de tes messages envoyés</h2>
-          <hr>
-          <div id="messages-received-list">
-            <%if @messages_sent.present?%>
-              <%@messages_sent.each do |message|%>
-                <%= render partial: "message_object", locals: {message: message, recipient: message.recipient}%>
-              <%end%>
-              <%else%>
-              Pas encore de messages envoyés
-            <%end%>
-          </div>
+          <%= render 'friends_list'%>
         </div>
       </div>
-      <div class="col sticky-top">
-        <h2 class="offset-md-1">Message sélectionné</h2>
+      <div class="col-8 card sticky-top">
+        <h2 class="offset-md-1">Conversation</h2>
         <div class="p-3 " id="message-display"></div>
       </div>
     </div>
-  </div>
+    </div>
