--- a/app/views/events/_events_around.html.erb
+++ b/app/views/events/_events_around.html.erb
@@ -1,48 +1,36 @@
-<div class="card">
-  <p class="card-title"> Rencontre des gens lors d'evenements sportifs </p>
-  <p class="card-icon"> <i class="fa-solid fa-calendar-plus"></i></i> </p> 
-  <div class="container-geoloc">
-    <div class="list-container">
-      <div class="container">
-        <% if @events.empty?%>
-              <p> Tu n'as pas encore d'event autour de toi, renseigne ton addresse ! </p>
-        <%else%>
-              <h2> Les evenements autour de toi (scroll)</h2>
-              <br>
-                <ul class="event-items scrollable-list">
-                    <% @events.each do |event| %>
-                      <li class="event-item">
-                        <div class="event-date-container"> 
-                          <p class="event-date-day"> <%= event.date.strftime("%d")%> </p>
-                          <p> <%= event.date.strftime("%B") %>  </p>
-                        </div>
-                        <div class="event-content"> 
-                          <h3> <%= link_to event.title, event_path(event) %>  </h3>
 
-                          <%= render partial: 'event_participations', locals: {event: event}%>
+        <br>
+          <ul class="event-items scrollable-list">
+              <% events.each do |event| %>
+                <li class="event-item">
+                  <div class="event-date-container"> 
+                    <p class="event-date-day"> <%= event.date.strftime("%d")%> </p>
+                    <p> <%= event.date.strftime("%B") %>  </p>
+                  </div>
+                  <div class="event-content"> 
+                    <h3> <%= link_to event.title, event_path(event) %>  </h3>
 
-                          <%= event.date.strftime("%Hh%M")%>
-                        </div>
-                        
-                        <div class="button-participate">
-                          <%if find_participation(event,current_user) %>
-                            <%=button_to event_participation_path(event, find_participation(event,current_user)), method: :delete, :class => "button primary-outline" do %>
-                            <i class="bi bi-bookmark-check-fill"></i>&nbsp; Ne plus participer<%end%>
-                            <% elsif event.is_full? %>
-                            <button>DESO C'EST PLEIN</button>
-                            <%else%>
-                            <%=button_to event_participations_path(event),:class => "button primary" do %>
-                            <i class="bi bi-bookmark-plus"></i></i>&nbsp; Participer <%end%>
-                          <%end%>
-                        </div>
+                    <%= render partial: 'events/event_participations', locals: {event: event}%>
+
+                    <%= event.date.strftime("%Hh%M")%>
+                  </div>
+                  
+                  <div class="button-participate">
+                    <%if find_participation(event,current_user) %>
+                      <%=button_to event_participation_path(event, find_participation(event,current_user)), method: :delete, :class => "button primary-outline" do %>
+                      <i class="bi bi-bookmark-check-fill"></i>&nbsp; Ne plus participer<%end%>
+                      <% elsif event.is_full? %>
+                      <button>DESO C'EST PLEIN</button>
+                      <%else%>
+                      <%=button_to event_participations_path(event),:class => "button primary" do %>
+                      <i class="bi bi-bookmark-plus"></i></i>&nbsp; Participer <%end%>
+                    <%end%>
+                  </div>
 
 
-                        <div class="event-sport-tag"> <%=event.sport.name%> </div>
-                      </li>
-                    <%end%> 
-                </ul>
-          <%end%>
-      </div>
-    </div>
-  </div>
-</div>
+                  <div class="event-sport-tag"> <%=event.sport.name%> </div>
+                </li>
+              <%end%> 
+          </ul>
+
+     
