--- a/app/views/messages/_friends_list.html.erb
+++ b/app/views/messages/_friends_list.html.erb
@@ -1,20 +1,20 @@
-
-  <p class="card-title"> Tes conversations </p>
-  <div class="friends-list">
-    <ul>
-      <% if current_user.friends.length == 0%>
-        <p>Tu n'as pas encore d'amis, ajoute des suggestions ! </p>
-      <%else%>
-        <% current_user.friends.each do |friend|%>
-          <li>
-            <div class="d-flex">
-              <%if current_user.conversation(friend).present?%>
-                <%= link_to friend.full_name, message_path(current_user.last_message(friend), user: friend), remote: :true, method: :patch %>
-              <%end%>
-            </div>
-          </li>
-        <%end%>
+<p class="card-title"> Tes conversations </p>
+<div class="friends-list">
+  <ul>
+    <% if current_user.friends.length == 0%>
+      <p>Tu n'as pas encore d'amis ! </p>
+    <%else%>
+      <% current_user.friends.each do |friend|%>
+        <li>
+          <div class="d-flex">
+            <%if current_user.conversation(friend).present?%>
+              <%= link_to friend.full_name, message_path(current_user.last_message(friend), user: friend), remote: :true, method: :patch, class: "friend-#{friend.id}"%>
+            <%else%>
+              <%= link_to friend.full_name, messages_path(@message, new: true, user: friend), remote: :true, method: :post, class: "friend-#{friend.id}" %>
+            <%end%>
+          </div>
+        </li>
       <%end%>
-    </ul>
-  </div>
-
+    <%end%>
+  </ul>
+</div>
