LL fixing syntax of messages

--- a/app/views/messages/_message_display.html.erb
+++ b/app/views/messages/_message_display.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-<%message.created_at%>
+<%=message.created_at%>
   <%if message.sender == current_user%>
     <div class="col"></div>
     <div class="col">
