--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -10,6 +10,8 @@
      
   </div>
 
+
+
   <div class="right-container right-content">
     <div class="top-element">
         <div class="twins">
@@ -64,10 +66,33 @@
       </div>
     </div>
 
+      <%if @event.longitude %>
+        <div id='map-event' class="mapbox-container"
+              data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY']%>"
+              data-event-lng="<%= @event.longitude%>"
+              data-event-lat="<%= @event.latitude%>">
+        </div>
+      <%end%>
+
+    <div class="button-participate">
+      <%if find_participation(@event,current_user) %>
+        <%=button_to event_participation_path(@event, find_participation(@event,current_user)), method: :delete, :class => "button primary-outline" do %>
+        <i class="bi bi-bookmark-check-fill"></i>&nbsp; Ne plus participer<%end%>
+        <% elsif @event.is_full? %>
+        <button>DESO C'EST PLEIN</button>
+        <%else%>
+        <%=button_to event_participations_path(@event),:class => "button primary" do %>
+        <i class="bi bi-bookmark-plus"></i></i>&nbsp; Participer <%end%>
+      <%end%>
+    </div>
+
     <div class="button-row">
       <%= link_to 'Edit', edit_event_path(@event) %> |
       <%= link_to 'Back', events_path%>
-    </div>  
-    
+    </div>      
   </div>
+
 </div>
+
+
+<%= javascript_include_tag 'map_box'%>
